--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
     "name": "Ubertron Pro Vision AI",
     "icons": [
         {
-            "src": "data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%230f0f1e%22/><text y=%22.9em%22 font-size=%2280%22 x=%2210%22>👁️</text></svg>",
-            "type": "image/svg+xml",
+            "src": "icon.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "icon.png",
+            "type": "image/png",
             "sizes": "512x512"
         }
     ],
