--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "./ubertron_production.html",
+    "start_url": "./index.html",
     "background_color": "#0f0f1e",
     "display": "standalone",
     "scope": "./",
